k8s-training/Normal-budybox-nginx-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
  labels:
    allowed: nginx
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "360000"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
