k8s-training/irsa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-pod
spec:
  serviceAccountName: my-serviceaccount
  containers:
    - image: ghcr.io/samuelbagattin/eks-irsa-example:master
      name: medium-irsa-article
      imagePullPolicy: Always
