k8s-training/calico-global-allow-few-ns.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-nginx-app1-allos-few-ns
spec:
  order: 10
  selector: app == 'nginx-app1'
  ingress:
    - action: Allow
      source:
        namespaceSelector: allowed == 'nginx'
