k8s-training/calico-global-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: deny-nginx-app1
spec:
  order: 10
  selector: app == 'nginx-app1'
  ingress:
    - action: Deny
      source:
        selector: allowed == 'nginx'
