k8s-training/normal-all-busybox-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: normal-all-budybox
spec:
  podSelector:
    matchLabels:
      app: nginx-app2
  ingress:
  - from:
    - podSelector: {}
