k8s-training/normal-busybox-with-nginx-label.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: normal-all-budybox
spec:
  podSelector:
    matchLabels:
      app: nginx-app2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          allowed: nginx
